[package]
name = "gobbler"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clap = { version = "3.2.16", features = ["cargo", "derive", "env"] }
rayon = "1.5.3"
termcolor = "1.1.3"
thiserror = "1.0.32"
winreg = { version = "0.10.1", features = ["chrono"] }

[dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Web_Syndication",
    "Win32_Foundation",
    "Win32_UI_Shell",
]
