[package]
name = "gobbler"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["cargo", "derive", "env"] }
rayon = "1.7.0"
termcolor = "1.2.0"
thiserror = "1.0.43"
winreg = { version = "0.50.0", features = ["chrono"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Web_Syndication",
    "Win32_Foundation",
    "Win32_UI_Shell",
]
