[package]
name = "gobbler"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["cargo", "derive", "env"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.1"
termcolor = "1.4.1"
thiserror = "1.0.56"
url = "2.5.0"
winreg = { version = "0.52.0", features = ["chrono"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Web_Syndication",
    "Win32_Foundation",
    "Win32_UI_Shell",
]
